<resources>
    <string name="app_name">Lex Viagens</string>
    <string name="pacotes">PACOTES</string>
    <string name="especiais">Especiais</string>
    <string name="brasil">Brasil</string>
    <string name="sao_paulo">São Paulo</string>
    <string name="mock_2_dias">2 dias</string>
    <string name="mock_valor">R$ 243,99</string>
    <string name="todo">TODO</string>
    <string name="banner">Banner Inicial para Aplicação</string>
    <string name="imagem_da_localidade">Imagem da Localidade</string>
    <string name="preco_final">Preço Final:</string>
    <string name="realizar_pagamento">Realizar Pagamento</string>
    <string name="digite_informacoes">Digite as Informações do cartão de crédito que você deseja usar para o pagmento</string>
    <string name="valor_da_compra">Valor da compra:</string>
    <string name="numero_cartao">Número do Cartão</string>
    <string name="cartao_aa">AA</string>
    <string name="cartao_mm">MM</string>
    <string name="cartao_cvc">CVC</string>
    <string name="nome_no_cartao">Nome no Cartão</string>
    <string name="finalizar_compra">Finalizar Compra</string>
    <string name="restricao_nome">abcdefghijklmnopqrstuvwxyzç ABCDEFGHIJKLMNOPQRSTUVWXYZÇ</string>
    <string name="parabens">Parabéns!</string>
    <string name="compra_sucesso">Compra realizada com sucesso :)</string>
    <string name="confira_o_resumo_da_compra">Confira o resumo da compra:</string>
</resources>