<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.PagamentoActivity">

    <!-- Texto Fixo -->
    <TextView
        android:id="@+id/pagamento_orientacao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"
        android:text="@string/digite_informacoes"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <!-- Texto Fixo -->
    <TextView
        android:id="@+id/pagamento_valor_da_compra"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/valor_da_compra"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pagamento_orientacao" />

    <TextView
        android:id="@+id/pagamento_preco_pacote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/pagamento_valor_da_compra"
        app:layout_constraintTop_toBottomOf="@id/pagamento_valor_da_compra"
        tools:text="R$ 421,50" />

    <EditText
        android:id="@+id/pagamento_numero_cartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/numero_cartao"
        android:inputType="number"
        android:maxLength="12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_preco_pacote" />

    <EditText
        android:id="@+id/pagamento_mes_cartao"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/cartao_mm"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/pagamento_cvc_cartao"
        app:layout_constraintStart_toStartOf="@id/pagamento_numero_cartao"
        app:layout_constraintTop_toBottomOf="@id/pagamento_numero_cartao" />

    <EditText
        android:id="@+id/pagamento_ano_cartao"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/cartao_aa"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/pagamento_cvc_cartao"
        app:layout_constraintStart_toEndOf="@id/pagamento_mes_cartao"
        app:layout_constraintTop_toBottomOf="@id/pagamento_numero_cartao" />

    <EditText
        android:id="@+id/pagamento_cvc_cartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_cvc_cartao_de_credito"
        android:drawableLeft="@drawable/ic_cvc_cartao_de_credito"
        android:hint="@string/cartao_cvc"
        android:inputType="number"
        android:maxLength="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pagamento_numero_cartao" />

    <EditText
        android:id="@+id/pagamento_nome_no_cartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:digits="@string/restricao_nome"
        android:hint="@string/nome_no_cartao"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/pagamento_orientacao"
        app:layout_constraintStart_toStartOf="@+id/pagamento_orientacao"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_cvc_cartao" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/pagamento_botao_finalizar_compra"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/botao_redondo_laranja"
        android:text="@string/finalizar_compra"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/pagamento_nome_no_cartao"
        app:layout_constraintStart_toStartOf="@+id/pagamento_nome_no_cartao"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_nome_no_cartao" />

</androidx.constraintlayout.widget.ConstraintLayout>